fix tag overlap

--- a/css/main.css
+++ b/css/main.css
@@ -130,6 +130,8 @@ pre .lineno {
 
 .tag {
   padding: 2px 6px;
+  display: inline-block;
+  margin: 3px 0;
   font-size: 14px;
   font-weight: bold;
   line-height: 14px;
